# goedware-game-14

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  plan.md  run.bat  run.sh  setup.bat  setup.sh
.github/workflows/: ci.yml
src/: main.cpp
src/classes/: Object.cpp  Object.hpp  Scene.cpp  Scene.hpp
src/classes/objects/: AnimatedSpriteObject.cpp  AnimatedSpriteObject.hpp  ConverterObject.cpp  ConverterObject.hpp  DebugObject.cpp  DebugObject.hpp  InteractableObject.cpp  InteractableObject.hpp  PlayerObject.cpp  PlayerObject.hpp  StarObject.cpp  StarObject.hpp  ZoneObject.cpp  ZoneObject.hpp
src/classes/utils/: Helpers.cpp  Helpers.hpp  Structs.hpp  Variables.cpp  Variables.hpp
